--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "pinia": "^2.1.3",
     "pinia-plugin-persistedstate": "^3.1.0",
